// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Login /> should render error 1`] = `
.emotion-31 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100vh;
}

.emotion-2 {
  padding-bottom: 16px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #d7f2de;
  border-radius: 2px;
  padding: 12px;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 12px;
  color: #191919;
  font-weight: 500;
}

.emotion-30 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 64px;
  width: 446px;
  background-color: #2e2e2e;
  border-radius: 2px;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
}

.emotion-3 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-4 {
  text-align: center;
  font-size: 18px;
  line-height: 21px;
  padding-top: 32px;
  padding-bottom: 32px;
}

.emotion-9 {
  padding-bottom: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-8 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  width: 200px;
  min-width: 200px;
  max-width: 200px;
  background-color: #318AF5;
  padding: 2px;
}

.emotion-8:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-8[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-8:hover {
  background-color: #0053C4;
}

.emotion-8[aria-disabled=true] {
  opacity: 0.5;
  color: #ffffff;
  background-color: #318AF5;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 12px;
  background-color: #ffffff;
  border-radius: 2px;
}

.emotion-6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-17 {
  padding-top: 8px;
}

.emotion-13 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-15 {
  position: relative;
}

.emotion-22 {
  position: absolute;
  right: 0;
  top: 0;
  bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-21 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  color: #b3b3b3;
  padding: 12px;
  outline-offset: -2px;
}

.emotion-21:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-21[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-21:hover {
  color: #73b61c;
}

.emotion-28 {
  padding-top: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-27 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
}

.emotion-27:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-27[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-27,
.emotion-27:hover,
.emotion-27:visited {
  background-color: #73b61c;
}

.emotion-27:hover {
  background-color: #96c955;
}

.emotion-27[aria-disabled=true] {
  background-color: #808080;
}

.emotion-29 {
  padding-top: 32px;
  text-align: center;
}

.emotion-29 a {
  color: #808080;
}

.emotion-12 {
  padding-bottom: 8px;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #ffb6b2;
  border-radius: 2px;
  padding: 12px;
}

.emotion-14 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  color: #000000;
  background-color: #ffffff;
  border: 2px solid #c92300;
  border-width: 2px;
}

.emotion-14:focus {
  border: 2px solid #73b61c;
  outline: #73b61c;
}

.emotion-16 {
  color: #c92300;
  font-style: italic;
}

<div
  className="emotion-31"
>
  <div
    className="emotion-2"
  >
    <div
      className="emotion-1"
    >
      <svg
        color="#4ac565"
        data-file-name="checkmark.svg"
        height={20}
      />
      <div
        className="emotion-0"
        role="alert"
      >
        Password has been updated.
      </div>
    </div>
  </div>
  <form
    className="emotion-30"
    method="post"
    onSubmit={[Function]}
  >
    <svg
      className="emotion-3"
      data-file-name="largeLogo.svg"
      width={180}
    />
    <h3
      className="emotion-4"
    >
      Welcome. Please login.
    </h3>
    <div
      className="emotion-9"
    >
      <button
        aria-label="Sign in with Google"
        className="emotion-8"
        onClick={[Function]}
        type="button"
      >
        <div
          className="emotion-7"
        >
          <div
            className="emotion-5"
          >
            <svg
              data-file-name="google_logo.svg"
              height={20}
            />
          </div>
          <div
            className="emotion-6"
          >
            Sign in with Google
          </div>
        </div>
      </button>
    </div>
    <div
      className="emotion-12"
    >
      <div
        className="emotion-11"
      >
        <svg
          color="#c92300"
          data-file-name="warning.svg"
          height={20}
        />
        <div
          className="emotion-0"
          role="alert"
        >
          Something went wrong
        </div>
      </div>
    </div>
    <div
      className="emotion-17"
    >
      <label
        className="emotion-13"
        htmlFor="username"
      >
        Email
      </label>
      <div
        className="emotion-15"
      >
        <input
          autoFocus={true}
          className="emotion-14"
          disabled={false}
          id="username"
          name="username"
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        className="emotion-17"
      >
        <span
          className="emotion-16"
        >
          
        </span>
         
      </div>
    </div>
    <div
      className="emotion-17"
    >
      <label
        className="emotion-13"
        htmlFor="password"
      >
        Password
      </label>
      <div
        className="emotion-15"
      >
        <input
          className="emotion-14"
          disabled={false}
          id="password"
          name="password"
          onChange={[Function]}
          type="password"
          value=""
        />
        <div
          className="emotion-22"
        >
          <button
            aria-label="Show password"
            className="emotion-21"
            onClick={[Function]}
            type="button"
          >
            <svg
              data-file-name="hidden.svg"
              height={20}
            />
          </button>
        </div>
      </div>
      <div
        className="emotion-17"
      >
        <span
          className="emotion-16"
        >
          
        </span>
         
      </div>
    </div>
    <div
      className="emotion-28"
    >
      <button
        aria-disabled={true}
        className="emotion-27"
        onClick={[Function]}
        type="submit"
      >
        Login
      </button>
    </div>
    <div
      className="emotion-29"
    >
      <a
        href="/create-account"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Create an account
      </a>
      <br />
      <br />
      <a
        href="/reset-password"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Reset your password
      </a>
    </div>
  </form>
</div>
`;

exports[`<Login /> should render password changed 1`] = `
.emotion-26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100vh;
}

.emotion-2 {
  padding-bottom: 16px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #d7f2de;
  border-radius: 2px;
  padding: 12px;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 12px;
  color: #191919;
  font-weight: 500;
}

.emotion-25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 64px;
  width: 446px;
  background-color: #2e2e2e;
  border-radius: 2px;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
}

.emotion-3 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-4 {
  text-align: center;
  font-size: 18px;
  line-height: 21px;
  padding-top: 32px;
  padding-bottom: 32px;
}

.emotion-9 {
  padding-bottom: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-8 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  width: 200px;
  min-width: 200px;
  max-width: 200px;
  background-color: #318AF5;
  padding: 2px;
}

.emotion-8:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-8[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-8:hover {
  background-color: #0053C4;
}

.emotion-8[aria-disabled=true] {
  opacity: 0.5;
  color: #ffffff;
  background-color: #318AF5;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 12px;
  background-color: #ffffff;
  border-radius: 2px;
}

.emotion-6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-13 {
  padding-top: 8px;
}

.emotion-10 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-12 {
  position: relative;
}

.emotion-11 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  color: #000000;
  background-color: #ffffff;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-11:focus {
  border: 2px solid #73b61c;
  outline: #73b61c;
}

.emotion-18 {
  position: absolute;
  right: 0;
  top: 0;
  bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-17 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  color: #b3b3b3;
  padding: 12px;
  outline-offset: -2px;
}

.emotion-17:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-17[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-17:hover {
  color: #73b61c;
}

.emotion-23 {
  padding-top: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-22 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
}

.emotion-22:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-22[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-22,
.emotion-22:hover,
.emotion-22:visited {
  background-color: #73b61c;
}

.emotion-22:hover {
  background-color: #96c955;
}

.emotion-22[aria-disabled=true] {
  background-color: #808080;
}

.emotion-24 {
  padding-top: 32px;
  text-align: center;
}

.emotion-24 a {
  color: #808080;
}

<div
  className="emotion-26"
>
  <div
    className="emotion-2"
  >
    <div
      className="emotion-1"
    >
      <svg
        color="#4ac565"
        data-file-name="checkmark.svg"
        height={20}
      />
      <div
        className="emotion-0"
        role="alert"
      >
        Password has been updated.
      </div>
    </div>
  </div>
  <form
    className="emotion-25"
    method="post"
    onSubmit={[Function]}
  >
    <svg
      className="emotion-3"
      data-file-name="largeLogo.svg"
      width={180}
    />
    <h3
      className="emotion-4"
    >
      Welcome. Please login.
    </h3>
    <div
      className="emotion-9"
    >
      <button
        aria-label="Sign in with Google"
        className="emotion-8"
        onClick={[Function]}
        type="button"
      >
        <div
          className="emotion-7"
        >
          <div
            className="emotion-5"
          >
            <svg
              data-file-name="google_logo.svg"
              height={20}
            />
          </div>
          <div
            className="emotion-6"
          >
            Sign in with Google
          </div>
        </div>
      </button>
    </div>
    <div
      className="emotion-13"
    >
      <label
        className="emotion-10"
        htmlFor="username"
      >
        Email
      </label>
      <div
        className="emotion-12"
      >
        <input
          autoFocus={true}
          className="emotion-11"
          disabled={false}
          id="username"
          name="username"
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        className="emotion-13"
      >
         
      </div>
    </div>
    <div
      className="emotion-13"
    >
      <label
        className="emotion-10"
        htmlFor="password"
      >
        Password
      </label>
      <div
        className="emotion-12"
      >
        <input
          className="emotion-11"
          disabled={false}
          id="password"
          name="password"
          onChange={[Function]}
          type="password"
          value=""
        />
        <div
          className="emotion-18"
        >
          <button
            aria-label="Show password"
            className="emotion-17"
            onClick={[Function]}
            type="button"
          >
            <svg
              data-file-name="hidden.svg"
              height={20}
            />
          </button>
        </div>
      </div>
      <div
        className="emotion-13"
      >
         
      </div>
    </div>
    <div
      className="emotion-23"
    >
      <button
        aria-disabled={true}
        className="emotion-22"
        onClick={[Function]}
        type="submit"
      >
        Login
      </button>
    </div>
    <div
      className="emotion-24"
    >
      <a
        href="/create-account"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Create an account
      </a>
      <br />
      <br />
      <a
        href="/reset-password"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Reset your password
      </a>
    </div>
  </form>
</div>
`;

exports[`<Login /> should render properly 1`] = `
.emotion-26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100vh;
}

.emotion-2 {
  padding-bottom: 16px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #d7f2de;
  border-radius: 2px;
  padding: 12px;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 12px;
  color: #191919;
  font-weight: 500;
}

.emotion-25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 64px;
  width: 446px;
  background-color: #2e2e2e;
  border-radius: 2px;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
}

.emotion-3 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-4 {
  text-align: center;
  font-size: 18px;
  line-height: 21px;
  padding-top: 32px;
  padding-bottom: 32px;
}

.emotion-9 {
  padding-bottom: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-8 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  width: 200px;
  min-width: 200px;
  max-width: 200px;
  background-color: #318AF5;
  padding: 2px;
}

.emotion-8:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-8[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-8:hover {
  background-color: #0053C4;
}

.emotion-8[aria-disabled=true] {
  opacity: 0.5;
  color: #ffffff;
  background-color: #318AF5;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 12px;
  background-color: #ffffff;
  border-radius: 2px;
}

.emotion-6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-13 {
  padding-top: 8px;
}

.emotion-10 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-12 {
  position: relative;
}

.emotion-11 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  color: #000000;
  background-color: #ffffff;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-11:focus {
  border: 2px solid #73b61c;
  outline: #73b61c;
}

.emotion-18 {
  position: absolute;
  right: 0;
  top: 0;
  bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-17 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  color: #b3b3b3;
  padding: 12px;
  outline-offset: -2px;
}

.emotion-17:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-17[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-17:hover {
  color: #73b61c;
}

.emotion-23 {
  padding-top: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-22 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
}

.emotion-22:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-22[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-22,
.emotion-22:hover,
.emotion-22:visited {
  background-color: #73b61c;
}

.emotion-22:hover {
  background-color: #96c955;
}

.emotion-22[aria-disabled=true] {
  background-color: #808080;
}

.emotion-24 {
  padding-top: 32px;
  text-align: center;
}

.emotion-24 a {
  color: #808080;
}

<div
  className="emotion-26"
>
  <div
    className="emotion-2"
  >
    <div
      className="emotion-1"
    >
      <svg
        color="#4ac565"
        data-file-name="checkmark.svg"
        height={20}
      />
      <div
        className="emotion-0"
        role="alert"
      >
        Password reset email sent.
      </div>
    </div>
  </div>
  <form
    className="emotion-25"
    method="post"
    onSubmit={[Function]}
  >
    <svg
      className="emotion-3"
      data-file-name="largeLogo.svg"
      width={180}
    />
    <h3
      className="emotion-4"
    >
      Welcome. Please login.
    </h3>
    <div
      className="emotion-9"
    >
      <button
        aria-label="Sign in with Google"
        className="emotion-8"
        onClick={[Function]}
        type="button"
      >
        <div
          className="emotion-7"
        >
          <div
            className="emotion-5"
          >
            <svg
              data-file-name="google_logo.svg"
              height={20}
            />
          </div>
          <div
            className="emotion-6"
          >
            Sign in with Google
          </div>
        </div>
      </button>
    </div>
    <div
      className="emotion-13"
    >
      <label
        className="emotion-10"
        htmlFor="username"
      >
        Email
      </label>
      <div
        className="emotion-12"
      >
        <input
          autoFocus={true}
          className="emotion-11"
          disabled={false}
          id="username"
          name="username"
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        className="emotion-13"
      >
         
      </div>
    </div>
    <div
      className="emotion-13"
    >
      <label
        className="emotion-10"
        htmlFor="password"
      >
        Password
      </label>
      <div
        className="emotion-12"
      >
        <input
          className="emotion-11"
          disabled={false}
          id="password"
          name="password"
          onChange={[Function]}
          type="password"
          value=""
        />
        <div
          className="emotion-18"
        >
          <button
            aria-label="Show password"
            className="emotion-17"
            onClick={[Function]}
            type="button"
          >
            <svg
              data-file-name="hidden.svg"
              height={20}
            />
          </button>
        </div>
      </div>
      <div
        className="emotion-13"
      >
         
      </div>
    </div>
    <div
      className="emotion-23"
    >
      <button
        aria-disabled={true}
        className="emotion-22"
        onClick={[Function]}
        type="submit"
      >
        Login
      </button>
    </div>
    <div
      className="emotion-24"
    >
      <a
        href="/create-account"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Create an account
      </a>
      <br />
      <br />
      <a
        href="/reset-password"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Reset your password
      </a>
    </div>
  </form>
</div>
`;

exports[`<Login /> should render properly on account activation success 1`] = `
.emotion-26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100vh;
}

.emotion-2 {
  padding-bottom: 16px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #d7f2de;
  border-radius: 2px;
  padding: 12px;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 12px;
  color: #191919;
  font-weight: 500;
}

.emotion-25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 64px;
  width: 446px;
  background-color: #2e2e2e;
  border-radius: 2px;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
}

.emotion-3 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-4 {
  text-align: center;
  font-size: 18px;
  line-height: 21px;
  padding-top: 32px;
  padding-bottom: 32px;
}

.emotion-9 {
  padding-bottom: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-8 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  width: 200px;
  min-width: 200px;
  max-width: 200px;
  background-color: #318AF5;
  padding: 2px;
}

.emotion-8:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-8[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-8:hover {
  background-color: #0053C4;
}

.emotion-8[aria-disabled=true] {
  opacity: 0.5;
  color: #ffffff;
  background-color: #318AF5;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 12px;
  background-color: #ffffff;
  border-radius: 2px;
}

.emotion-6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-13 {
  padding-top: 8px;
}

.emotion-10 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-12 {
  position: relative;
}

.emotion-11 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  color: #000000;
  background-color: #ffffff;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-11:focus {
  border: 2px solid #73b61c;
  outline: #73b61c;
}

.emotion-18 {
  position: absolute;
  right: 0;
  top: 0;
  bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-17 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  color: #b3b3b3;
  padding: 12px;
  outline-offset: -2px;
}

.emotion-17:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-17[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-17:hover {
  color: #73b61c;
}

.emotion-23 {
  padding-top: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-22 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
}

.emotion-22:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-22[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-22,
.emotion-22:hover,
.emotion-22:visited {
  background-color: #73b61c;
}

.emotion-22:hover {
  background-color: #96c955;
}

.emotion-22[aria-disabled=true] {
  background-color: #808080;
}

.emotion-24 {
  padding-top: 32px;
  text-align: center;
}

.emotion-24 a {
  color: #808080;
}

<div
  className="emotion-26"
>
  <div
    className="emotion-2"
  >
    <div
      className="emotion-1"
    >
      <svg
        color="#4ac565"
        data-file-name="checkmark.svg"
        height={20}
      />
      <div
        className="emotion-0"
        role="alert"
      >
        Account activated. Please login now.
      </div>
    </div>
  </div>
  <form
    className="emotion-25"
    method="post"
    onSubmit={[Function]}
  >
    <svg
      className="emotion-3"
      data-file-name="largeLogo.svg"
      width={180}
    />
    <h3
      className="emotion-4"
    >
      Welcome. Please login.
    </h3>
    <div
      className="emotion-9"
    >
      <button
        aria-label="Sign in with Google"
        className="emotion-8"
        onClick={[Function]}
        type="button"
      >
        <div
          className="emotion-7"
        >
          <div
            className="emotion-5"
          >
            <svg
              data-file-name="google_logo.svg"
              height={20}
            />
          </div>
          <div
            className="emotion-6"
          >
            Sign in with Google
          </div>
        </div>
      </button>
    </div>
    <div
      className="emotion-13"
    >
      <label
        className="emotion-10"
        htmlFor="username"
      >
        Email
      </label>
      <div
        className="emotion-12"
      >
        <input
          autoFocus={true}
          className="emotion-11"
          disabled={false}
          id="username"
          name="username"
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        className="emotion-13"
      >
         
      </div>
    </div>
    <div
      className="emotion-13"
    >
      <label
        className="emotion-10"
        htmlFor="password"
      >
        Password
      </label>
      <div
        className="emotion-12"
      >
        <input
          className="emotion-11"
          disabled={false}
          id="password"
          name="password"
          onChange={[Function]}
          type="password"
          value=""
        />
        <div
          className="emotion-18"
        >
          <button
            aria-label="Show password"
            className="emotion-17"
            onClick={[Function]}
            type="button"
          >
            <svg
              data-file-name="hidden.svg"
              height={20}
            />
          </button>
        </div>
      </div>
      <div
        className="emotion-13"
      >
         
      </div>
    </div>
    <div
      className="emotion-23"
    >
      <button
        aria-disabled={true}
        className="emotion-22"
        onClick={[Function]}
        type="submit"
      >
        Login
      </button>
    </div>
    <div
      className="emotion-24"
    >
      <a
        href="/create-account"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Create an account
      </a>
      <br />
      <br />
      <a
        href="/reset-password"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Reset your password
      </a>
    </div>
  </form>
</div>
`;

exports[`<Login /> should render properly on account creation success 1`] = `
.emotion-26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100vh;
}

.emotion-2 {
  padding-bottom: 16px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #d7f2de;
  border-radius: 2px;
  padding: 12px;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 12px;
  color: #191919;
  font-weight: 500;
}

.emotion-25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 64px;
  width: 446px;
  background-color: #2e2e2e;
  border-radius: 2px;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
}

.emotion-3 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-4 {
  text-align: center;
  font-size: 18px;
  line-height: 21px;
  padding-top: 32px;
  padding-bottom: 32px;
}

.emotion-9 {
  padding-bottom: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-8 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  width: 200px;
  min-width: 200px;
  max-width: 200px;
  background-color: #318AF5;
  padding: 2px;
}

.emotion-8:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-8[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-8:hover {
  background-color: #0053C4;
}

.emotion-8[aria-disabled=true] {
  opacity: 0.5;
  color: #ffffff;
  background-color: #318AF5;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 12px;
  background-color: #ffffff;
  border-radius: 2px;
}

.emotion-6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-13 {
  padding-top: 8px;
}

.emotion-10 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-12 {
  position: relative;
}

.emotion-11 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  color: #000000;
  background-color: #ffffff;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-11:focus {
  border: 2px solid #73b61c;
  outline: #73b61c;
}

.emotion-18 {
  position: absolute;
  right: 0;
  top: 0;
  bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-17 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  color: #b3b3b3;
  padding: 12px;
  outline-offset: -2px;
}

.emotion-17:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-17[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-17:hover {
  color: #73b61c;
}

.emotion-23 {
  padding-top: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-22 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
}

.emotion-22:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-22[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-22,
.emotion-22:hover,
.emotion-22:visited {
  background-color: #73b61c;
}

.emotion-22:hover {
  background-color: #96c955;
}

.emotion-22[aria-disabled=true] {
  background-color: #808080;
}

.emotion-24 {
  padding-top: 32px;
  text-align: center;
}

.emotion-24 a {
  color: #808080;
}

<div
  className="emotion-26"
>
  <div
    className="emotion-2"
  >
    <div
      className="emotion-1"
    >
      <svg
        color="#4ac565"
        data-file-name="checkmark.svg"
        height={20}
      />
      <div
        className="emotion-0"
        role="alert"
      >
        Account created. Please click the activation link in your email.
      </div>
    </div>
  </div>
  <form
    className="emotion-25"
    method="post"
    onSubmit={[Function]}
  >
    <svg
      className="emotion-3"
      data-file-name="largeLogo.svg"
      width={180}
    />
    <h3
      className="emotion-4"
    >
      Welcome. Please login.
    </h3>
    <div
      className="emotion-9"
    >
      <button
        aria-label="Sign in with Google"
        className="emotion-8"
        onClick={[Function]}
        type="button"
      >
        <div
          className="emotion-7"
        >
          <div
            className="emotion-5"
          >
            <svg
              data-file-name="google_logo.svg"
              height={20}
            />
          </div>
          <div
            className="emotion-6"
          >
            Sign in with Google
          </div>
        </div>
      </button>
    </div>
    <div
      className="emotion-13"
    >
      <label
        className="emotion-10"
        htmlFor="username"
      >
        Email
      </label>
      <div
        className="emotion-12"
      >
        <input
          autoFocus={true}
          className="emotion-11"
          disabled={false}
          id="username"
          name="username"
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        className="emotion-13"
      >
         
      </div>
    </div>
    <div
      className="emotion-13"
    >
      <label
        className="emotion-10"
        htmlFor="password"
      >
        Password
      </label>
      <div
        className="emotion-12"
      >
        <input
          className="emotion-11"
          disabled={false}
          id="password"
          name="password"
          onChange={[Function]}
          type="password"
          value=""
        />
        <div
          className="emotion-18"
        >
          <button
            aria-label="Show password"
            className="emotion-17"
            onClick={[Function]}
            type="button"
          >
            <svg
              data-file-name="hidden.svg"
              height={20}
            />
          </button>
        </div>
      </div>
      <div
        className="emotion-13"
      >
         
      </div>
    </div>
    <div
      className="emotion-23"
    >
      <button
        aria-disabled={true}
        className="emotion-22"
        onClick={[Function]}
        type="submit"
      >
        Login
      </button>
    </div>
    <div
      className="emotion-24"
    >
      <a
        href="/create-account"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Create an account
      </a>
      <br />
      <br />
      <a
        href="/reset-password"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Reset your password
      </a>
    </div>
  </form>
</div>
`;
